--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@jest/globals": "^29.7.0",
     "@nestjs/cli": "^11.0.2",
     "@nestjs/testing": "^11.0.9",
+    "@swc/core": "^1.11.4",
+    "@swc/jest": "^0.2.37",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
@@ -59,8 +61,8 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
+    "jest-extended": "^4.0.2",
     "prettier": "^3.5.0",
-    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "webpack": "^5.90.1"
