feat: users module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "@auth/*": ["app/src/auth/*"],
+      "@user/*": ["app/src/user/*"],
       "@config/*": ["app/src/config/*"],
       "@shared/*": ["app/src/shared/*"],
       "@prisma/*": ["app/prisma/*"],
