feat: mailer service

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ DATABASE_URL="postgresql://user:password@localhost:5432/authflow?schema=public"
 
 # JWT
 JWT_SECRET=your-jwt-secret
+
+# Mailflow
+MAILFLOW_URL="mailer-service-host"
+
+# Frontend
+FRONTEND_URL="http://localhost:3000"
