feat: url validator on utils

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ MAILFLOW_URL="mailer-service-host"
 
 # Frontend
 FRONTEND_URL="http://localhost:3000"
+
+# Allowed domains
+ALLOWED_DOMAINS="localhost:5173,localhost:5500,localhost:8080"
