fix: .env.example allowed domain

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ MAILFLOW_URL="mailer-service-host"
 FRONTEND_URL="http://localhost:3000"
 
 # Allowed domains
-ALLOWED_DOMAINS="localhost:5173,localhost:5500,localhost:8080"
+ALLOWED_DOMAINS="localhost"
